Fix for header overflow causing excess page width

--- a/src/frontend/components/table-header/_table-header.scss
+++ b/src/frontend/components/table-header/_table-header.scss
@@ -36,6 +36,12 @@
   flex-wrap: nowrap;
   gap: $padding-base-horizontal;
   padding-bottom: 1.5rem;
+  .table-header__navigation {
+    width: auto;
+  }
+  .table-header__meta {
+    width: max-content;
+  }
 }
 
 .table-header-bottom {
